clang/test/CIR/IR/invalid-coro-body.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

cir.func @must_be_inside_coroutine() { 
  cir.coro.body { // expected-error {{enclosing function must be a coroutine}}

  }
}

cir.func coroutine @must_have_one_coro_body(%arg0 : !cir.bool) {  // expected-error {{coroutine body must use at least one cir.await op}}
  cir.coro.body {
    cir.await(user, ready : {
      cir.condition(%arg0)
    }, suspend : {
      cir.yield
    }, resume : {
      cir.yield
    },)
  }
  cir.coro.body {
  }
}
